main.tf
terraform {
  required_providers {
    aws = {
        source = "hashicorp/aws"
        version = "~>5.0"
    }
  }
}

provider "aws" {
    region = "us-east-1"
  
}

resource "aws_vpc" "coffee_shop_vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_support = true
    enable_dns_hostnames = true

    tags = {
        Name = "CoffeeShopVPC"
    }
}

resource "aws_subnet" "public_subnet" {
    vpc_id = aws_vpc.coffee_shop_vpc.id
    cidr_block = "10.0.1.0/24"
    availability_zone = us-east-1a
    map_public_ip_on_launch = true

    tags = {
      Name = "PublicSubnet"
    }
  
}

resource "aws_subnet" "private_subnet" {
    vpc_id = aws_vpc.coffee_shop_vpc.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-1b"

    tags = {
      Name = "Private Subnet"
    }
  
}


resource "aws_internet_gateway" "gw" {
    vpc_id = aws_vpc.coffee_shop_vpc.id

    tags = {
        Name = "CoffeeShopIGW"
    }
  
}

resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.coffee_shop_vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "PublicRouteTable"
  }
}

resource "aws_route_table_association" "public_subnet_association" {
  subnet_id      = aws_subnet.public_subnet.id
  route_table_id = aws_route_table.public_route_table.id
}
